<resources>
    <string name="app_name">Stock</string>
    <string name="contacts">通讯录</string>
    <string name="chat">会话</string>
    <string name="discover">发现</string>
    <string name="me">我</string>

    <string name="search">Search</string>
    <string name="new_chat">发起群聊</string>
    <string name="add_contacts">添加朋友</string>
    <string name="scan_qr_code">扫一扫</string>
    <string name="help_feedback">帮助与反馈</string>

    <string name="login">登录</string>

    <string name="sent_a_text">发来一条消息</string>
    <string name="sent_a_image">发来一张图片</string>
    <string name="sent_a_voice">发来一段语音</string>
    <string name="sent_a_video">发来一个视频</string>
    <string name="sent_a_link">发来一个链接</string>
    <string name="sent_a_location">发来位置信息</string>
    <string name="sent_a_file">发来一个文件</string>

    <string name="connect_failed">不能连接到服务器</string>
    <string name="current_network_disabled">当前网络不可用，请检查网络设置</string>

    <string name="login_by_mobile">登录</string>
    <string name="user_register">用户注册</string>
    <string name="country">国家</string>
    <string name="china">中国</string>
    <string name="your_telephone">你的手机号</string>
    <string name="china_country_code">+86</string>
    <string name="input_password">填写密码</string>
    <string name="password">密码</string>
    <string name="find_password">找回密码</string>
    <string name="logging">登录中...</string>

    <string name="tel_can_not_null">手机号不能为空</string>
    <string name="psw_can_not_null">密码不能为空</string>

    <string name="new_friends">New Friends</string>
    <string name="group_chat">Group Chat</string>
    <string name="tags">Tags</string>
    <string name="official_accounts">Official Accounts</string>
    <string name="user_detail">详细资料</string>
    <string name="username">微信号：%s</string>
    <string name="nickname">昵称：%s</string>
    <string name="add_friend">添加到通讯录</string>
    <string name="send_message">发消息</string>

    <string name="moment">朋友圈</string>
    <string name="scan">扫一扫</string>
    <string name="game">游戏</string>
    <string name="buy">购物</string>
    <string name="wallet">钱包</string>
    <string name="collect">收藏</string>
    <string name="album">相册</string>
    <string name="card">卡包</string>
    <string name="expression">表情</string>
    <string name="settings">设置</string>
    <string name="security">安全</string>
    <string name="search_for">搜一搜</string>

    <string name="set_remark_tag">设置备注和标签</string>
    <string name="set_star">标为星标朋友</string>
    <string name="cancel_set_star">取消星标朋友</string>
    <string name="set_moment_hide">设置朋友圈权限</string>
    <string name="send_contact_card">发送该名片</string>
    <string name="delete">删除</string>

</resources>
