<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:im="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#ffffff">
    <com.spoom.base.widget.ImagePanel
            android:id="@+id/ip_new_friends"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_size"
            android:clickable="true"
            im:image="@drawable/icon_new_friends"
            im:text="@string/new_friends"
            im:unreadNumber="21"/>
    <com.spoom.base.widget.ImagePanel
            android:id="@+id/ip_group_chat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_size"
            android:clickable="true"
            im:image="@drawable/icon_group_chat"
            im:text="@string/group_chat"/>
    <com.spoom.base.widget.ImagePanel
            android:id="@+id/ip_tags"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_size"
            android:clickable="true"
            im:image="@drawable/icon_tags"
            im:text="@string/tags"/>
    <com.spoom.base.widget.ImagePanel
            android:id="@+id/ip_official_accounts"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_size"
            android:clickable="true"
            im:image="@drawable/icon_official_accounts"
            im:text="@string/send_message"
            im:bottomDivider="false"/>
</LinearLayout>