<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:padding="12dp">
        <RelativeLayout
                android:id="@+id/rl_country"
                android:layout_width="wrap_content"
                android:layout_height="48dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/country"
                    android:textColor="#353535"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/tv_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:text="@string/china"
                    android:textColor="@color/light_green"
                    android:textSize="16sp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#dbdbdb"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

            <EditText
                    android:text="xiaohei"
                    android:id="@+id/et_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_et"
                    android:hint="@string/your_telephone"
                    android:maxLines="1"
                    android:paddingLeft="90dp"
                    android:singleLine="true"
                    android:textColorHint="#DDDDDD"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_country_code"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/et_telephone"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/china_country_code"
                    android:textColor="#353535"
                    android:textSize="16sp"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

            <EditText
                    android:text="asdf1234"
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_et"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:paddingLeft="90dp"
                    android:singleLine="true"
                    android:textColorHint="#DDDDDD"
                    android:textSize="16sp"/>

            <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/et_password"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/password"
                    android:textColor="#353535"
                    android:textSize="16sp"/>
        </RelativeLayout>

        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/login"
                style="@style/AppTheme.Button.Green"
                android:textSize="18sp" android:enabled="true"/>

        <TextView
                android:id="@+id/tv_find_password"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/find_password"
                android:textColor="#576B95"
                android:textSize="14sp"/>
    </LinearLayout>
    <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_register"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_margin="33dp"
            android:gravity="center"
            android:text="@string/user_register"
            style="@style/AppTheme.Button"
            android:textColor="#353535"
            android:textSize="15sp"/>
</LinearLayout>