<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:im="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bk_gray">

    <RelativeLayout
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/space_20">
        <ImageView
                android:id="@+id/iv_avatar"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/contact_avatar_size"
                android:layout_height="@dimen/contact_avatar_size"
                android:layout_marginStart="15dp"/>
        <LinearLayout
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/iv_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_height="wrap_content"
                    android:text="用户名"
                    android:textColor="@color/font_tip"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/username"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/font_size_little"
                    />
        </LinearLayout>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/space_10"
                android:src="@drawable/icon_my_qr"
        />
    </RelativeLayout>

    <com.spoom.base.widget.ImagePanel
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_size"
            android:layout_marginTop="@dimen/space_20"
            android:clickable="true"
            im:image="@drawable/icon_wallet"
            im:text="@string/wallet"
            im:bottomDivider="false"/>

    <com.spoom.base.widget.ImagePanel
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_size"
            android:layout_marginTop="@dimen/space_20"
            android:clickable="true"
            im:image="@drawable/icon_collect"
            im:text="@string/collect"/>
    <com.spoom.base.widget.ImagePanel
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_size"
            android:clickable="true"
            im:image="@drawable/icon_album"
            im:text="@string/album"/>
    <com.spoom.base.widget.ImagePanel
            android:id="@+id/ip_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_size"
            android:clickable="true"
            im:image="@drawable/icon_card"
            im:text="@string/card"/>
    <com.spoom.base.widget.ImagePanel
            android:id="@+id/ip_security"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_size"
            android:clickable="true"
            im:image="@drawable/icon_security"
            im:text="@string/security"
            im:bottomDivider="false"/>

    <com.spoom.base.widget.ImagePanel
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_size"
            android:layout_marginTop="@dimen/space_20"
            android:clickable="true"
            im:image="@drawable/icon_settings"
            im:text="@string/settings"
            im:bottomDivider="false"/>
</LinearLayout>