<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white">
    <LinearLayout
            android:id="@+id/ll_set_remark"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_clickable_view"
            android:clickable="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">
        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/popup_icon_edit"/>
        <TextView
                android:text="@string/set_remark_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#505050"
                android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_set_star"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_clickable_view"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">
        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/popup_icon_star"/>
        <TextView
                android:id="@+id/tv_set_star"
                android:text="@string/set_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#505050"
                android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_set_moment"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_clickable_view"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">
        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/popup_icon_moment"/>
        <TextView
                android:text="@string/set_moment_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#505050"
                android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_send_contact"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_clickable_view"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">
        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/popup_icon_card"/>
        <TextView
                android:text="@string/send_contact_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#505050"
                android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_delete"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_clickable_view"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">
        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/popup_icon_delete"/>
        <TextView
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="#505050"
                android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>