<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bk_gray">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <!--头像-->
        <RelativeLayout
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="@dimen/space_20"
                android:layout_marginTop="@dimen/space_20">
            <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_avatar"
                    android:layout_width="@dimen/contact_avatar_size"
                    android:layout_height="@dimen/contact_avatar_size"
                    android:layout_marginStart="15dp"/>
            <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/iv_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center|left"
                            android:layout_height="wrap_content"
                            android:text="用户名"
                            android:textColor="@color/font_tip"
                            android:textSize="16sp"/>
                    <ImageView
                            android:layout_gravity="center"
                            android:id="@+id/iv_gender"
                            android:layout_width="@dimen/icon_small"
                            android:layout_height="@dimen/icon_small"
                            android:layout_marginLeft="8dp"
                            android:src="@drawable/icon_male"/>
                </LinearLayout>
                <TextView
                        android:layout_gravity="center|left"
                        android:id="@+id/tv_username"
                        android:text="@string/username"
                        android:textColor="@color/light_grey"
                        android:textSize="@dimen/font_size_little"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tv_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/light_grey"
                        android:textSize="@dimen/font_size_little"
                        android:text="@string/nickname"
                        android:visibility="visible"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp">
                <ImageView
                        android:id="@+id/iv_hide_his"
                        android:layout_width="@dimen/icon_small"
                        android:layout_height="@dimen/icon_small"
                        android:src="@drawable/hide_his_moment"
                        android:visibility="gone"/>
                <ImageView
                        android:id="@+id/iv_hide_my"
                        android:layout_width="@dimen/icon_small"
                        android:layout_height="@dimen/icon_small"
                        android:src="@drawable/hide_my_moment"
                        android:visibility="gone"/>
                <ImageView
                        android:id="@+id/iv_star"
                        android:layout_width="@dimen/icon_small"
                        android:layout_height="@dimen/icon_small"
                        android:src="@drawable/svg_star_24dp"
                        android:visibility="gone"/>
            </LinearLayout>
        </RelativeLayout>
        <!--设置备注和标签-->
        <RelativeLayout
                android:id="@+id/rl_set_remark"
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionBarSize"
                android:background="@drawable/bg_clickable_view"
                android:paddingLeft="@dimen/space_15"
                android:paddingRight="@dimen/space_15"
                android:clickable="true">
            <TextView
                    android:id="@+id/tv_set_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="设置备注和标签"
                    android:textColor="@color/font_tip"
                    android:textSize="@dimen/font_size_normal"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/divider_gray"/>
        </RelativeLayout>
        <!--电话-->
        <RelativeLayout
                android:id="@+id/re_telephone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionBarSize"
                android:background="@drawable/bg_clickable_view"
                android:paddingLeft="@dimen/space_15"
                android:paddingRight="@dimen/space_15">
            <TextView
                    android:id="@+id/tv_telephone_temp"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="电话号码"
                    android:textColor="@color/font_tip"
                    android:textSize="@dimen/font_size_normal"/>
            <TextView
                    android:id="@+id/tv_telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv_telephone_temp"
                    android:text="18588781024"
                    android:textColor="@color/phone_blue"
                    android:textSize="@dimen/font_size_light"/>
        </RelativeLayout>

        <!--地区-->
        <RelativeLayout
                android:id="@+id/rl_region"
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionBarSize"
                android:layout_marginTop="@dimen/space_20"
                android:paddingLeft="@dimen/space_15"
                android:paddingRight="@dimen/space_15"
                android:background="@drawable/bg_clickable_view">
            <TextView
                    android:id="@+id/tv_region_temp"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="地区"
                    android:textColor="@color/font_tip"
                    android:textSize="@dimen/font_size_normal"/>

            <TextView
                    android:id="@+id/tv_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv_region_temp"
                    android:text="安道尔"
                    android:textColor="#AAAAAA"
                    android:textSize="14sp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/divider_gray"/>
        </RelativeLayout>
        <!--个人相册-->
        <RelativeLayout
                android:id="@+id/re_moments"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/bg_clickable_view"
                android:paddingLeft="12dp"
                android:clickable="true"
                android:paddingRight="12dp">
            <TextView
                    android:id="@+id/tv_moments_temp"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="个人相册"
                    android:textColor="@color/font_tip"
                    android:textSize="@dimen/font_size_normal"/>
            <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_moment_one"
                    android:layout_width="@dimen/contact_avatar_size"
                    android:layout_height="@dimen/contact_avatar_size"
                    android:layout_toEndOf="@+id/tv_moments_temp"
                    android:paddingRight="5dp"
                    android:src="@drawable/default_avatar"/>
            <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_moment_two"
                    android:layout_width="@dimen/contact_avatar_size"
                    android:layout_height="@dimen/contact_avatar_size"
                    android:layout_toRightOf="@+id/iv_moment_one"
                    android:paddingRight="5dp"
                    android:src="@drawable/default_avatar"/>
            <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_moment_three"
                    android:layout_width="@dimen/contact_avatar_size"
                    android:layout_height="@dimen/contact_avatar_size"
                    android:layout_toRightOf="@+id/iv_moment_two"
                    android:paddingRight="5dp"
                    android:src="@drawable/default_avatar"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/divider_gray"/>
        </RelativeLayout>
        <!--更多-->
        <RelativeLayout
                android:id="@+id/re_more"
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionBarSize"
                android:background="@drawable/bg_clickable_view"
                android:paddingLeft="12dp"
                android:clickable="true"
                android:paddingRight="12dp">
            <TextView
                    android:id="@+id/tv_more"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="更多"
                    android:textColor="#353535"
                    android:textSize="16sp"/>
        </RelativeLayout>

        <!--发消息|添加通讯录-->
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="60dp">
            <Button
                    android:id="@+id/btn_send_message"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/space_15"
                    android:text="@string/send_message"
                    style="@style/AppTheme.Button.Green"
                    android:textSize="@dimen/font_size_large"/>
            <Button
                    android:id="@+id/btn_add_friend"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/space_15"
                    android:paddingBottom="7dp"
                    android:paddingTop="7dp"
                    android:text="@string/add_friend"
                    style="@style/AppTheme.Button"
                    android:textSize="@dimen/font_size_large"
                    android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>